--- a/docs/style.css
+++ b/docs/style.css
@@ -1,25 +1,89 @@
+* {
+    box-sizing: border-box;
+}
+
+
+html,
+body {
+    min-width: 320px;
+    padding: 0;
+    margin: 0;
+    background-color: var(--white-color);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    color: var(--black-color);
+}
+
+a {
+    color: var(--black-color);
+    text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+}
+
+ul {
+    padding: 5px;
+    list-style: none;
+}
+
+.container {
+    max-width: 1800px;
+    padding: 20px 20px;
+}
+
 .header {
-    min-height: 108px;
+    width: 100%;
+    height: 110px;
     background: #D9D9D9;
     box-shadow: 0px 21px 6px rgba(42, 33, 33, 0.01), 0px 14px 5px rgba(42, 33, 33, 0.1), 0px 8px 5px rgba(42, 33, 33, 0.35), 0px 3px 3px rgba(42, 33, 33, 0.6), 0px 1px 2px rgba(42, 33, 33, 0.69), 0px 0px 0px rgba(42, 33, 33, 0.7);
     border-radius: 0px 0px 18px 18px;
 }
 
-.logo {
-    padding-top: 22px;
-    padding-left: 50px;
-}
-
 .items-cards {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 60px;
+    margin-left: 80px;
 }
 
 .item-card {
-    margin-right: 20px;
-    margin-bottom: 20px;
-    width: 275px;
-    background-color: #ffffff;
-    border-radius: 12px;
-    border: 1px solid red;
+    margin-right: 84px;
+    margin-bottom: 80px;
+    padding: 40px 82px;
+    width: 370px;
+    background: #FFFDFD;
+    border: 1px solid grey;
+    border-radius: 94px;
+}
+
+.item-card__description
+
+.item-card:hover {
+    box-shadow: -15px 141px 40px rgba(102, 156, 53, 0.02), -9px 90px 36px rgba(102, 156, 53, 0.15), -5px 51px 31px rgba(102, 156, 53, 0.5), -2px 23px 23px rgba(102, 156, 53, 0.85), -1px 6px 12px rgba(102, 156, 53, 0.98), 0px 0px 0px #669C35;
+    transition: background-color 0.1s linear;
+}
+
+.hardware {
+    background-image: url('img/hardware.svg');
+}
+
+.airwatch {
+    background-image: url('img/airwatch.svg');
+}
+
+.printer {
+    background-image: url('img/printer.svg');
+}
+
+.folders {
+    background-image: url('img/folders.svg');
+}
+
+.item-card__icon {
+    width: 205px;
+    height: 189px;
+    background-repeat: no-repeat;
+    align-items: center;
 }
